--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Bank Marketing Dashboard - Requirements
+# Amazon Movie Reviews Dashboard - Requirements
 # Streamlit Community Cloud Deployment
 
 # Core Framework
@@ -6,14 +6,13 @@ streamlit>=1.28.0
 
 # Data Manipulation
 pandas>=2.0.0
-numpy>=1.24.0
 
 # Visualization
 plotly>=5.18.0
 
-# Machine Learning
-scikit-learn>=1.3.0
-xgboost>=2.0.0
+# MongoDB Connection
+pymongo>=4.6.0
+certifi>=2023.0.0
 
-# Dataset Source
-ucimlrepo>=0.0.3
+# Environment Variables
+python-dotenv>=1.0.0
