--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,15 @@
-# Amazon Movie Reviews Dashboard - Requirements
+# Bank Marketing Dashboard - Requirements
 # Streamlit Community Cloud Deployment
 
 # Core Framework
 streamlit>=1.28.0
-
 # Data Manipulation
 pandas>=2.0.0
-
+numpy>=1.24.0
 # Visualization
 plotly>=5.18.0
-
-# MongoDB Connection
-pymongo>=4.6.0
-certifi>=2023.0.0
-
-# Environment Variables
-python-dotenv>=1.0.0
+# Machine Learning
+scikit-learn>=1.3.0
+xgboost>=2.0.0
+# Dataset Source
+ucimlrepo>=0.0.3
